# SecureCollab

./: .env.example  .gitignore  README.md  Taskfile.yml  devbox.json  package-lock.json  spec.md
.claude/agents/: frontend-engineer.md  system-architect.md
.github/: copilot-instructions.md
.github/instructions/: architecture.instructions.md  docs.instructions.md  testing.instructions.md
.github/prompts/: week1-kickoff.prompt.md
.github/workflows/: ci.yml
client/: README.md  package-lock.json  package.json
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/ui/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
db/migrations/: 001_initial_users_and_workspaces.down.sql  001_initial_users_and_workspaces.up.sql  002_encrypted_messages.down.sql  002_encrypted_messages.up.sql  003_workspace_channels_enhancements.down.sql  003_workspace_channels_enhancements.up.sql  004_threads_reactions_pins.down.sql  004_threads_reactions_pins.up.sql
deploy/: docker-compose.cdc.yml  docker-compose.yml
deploy/observability/: prometheus-alerts.yml  prometheus.yml  promtail.yml
docs/: DESIGN_SYSTEM.md  PHASE1_GATE_REPORT.md  PHASE_CHECKLIST.md  PRODUCT_SCOPE.md  SETUP.md  SecureCollab.docx  WEEK1_COMPLETION.md  architecture.md
docs/adr/: 0001-gateway-rate-limiter-backend.md  README.md
docs/runbooks/: cdc-local.md  local-dev.md
pipeline/clickhouse/: init.sql
services/analytics/: Dockerfile  go.mod  go.sum
services/auth/: Dockerfile  go.mod  go.sum
(+93 files in other folders)
