[package]
name = "securecollab-client-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "securecollab_client_core"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
