[package]
name = "securecollab-client-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "securecollab_client_core"
path = "src/lib.rs"

[[bin]]
name = "securecollab"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
tauri = { version = "1", features = [] }

[build-dependencies]
tauri-build = { version = "1", features = [] }
